--- a/Cucumber_Testing_02/Cucumber_Testing_02/test-output/emailable-report.html
+++ b/Cucumber_Testing_02/Cucumber_Testing_02/test-output/emailable-report.html
@@ -9,11 +9,33 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">26,512</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">18,590</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestRunnerPackage.Runnerfile_3</td><td><a href="#m0">runScenario</a></td><td rowspan="2">1769584312109</td><td rowspan="2">11292</td></tr><tr class="passedeven"><td><a href="#m1">runScenario</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestRunnerPackage.ExcelFile</td><td><a href="#m0">runScenario</a></td><td rowspan="1">1769601719324</td><td rowspan="1">17637</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">TestRunnerPackage.Runnerfile_3#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Validate signup result&quot;</td><td>&quot;Optional[Sign up BooksWagon]&quot;</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestRunnerPackage.Runnerfile_3#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Validate signup result&quot;</td><td>&quot;Optional[Sign up BooksWagon]&quot;</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">TestRunnerPackage.ExcelFile#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Validate signup with Excel row 1 (first data row)&quot;</td><td>&quot;Optional[Sign up BooksWagon]&quot;</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;input type=&quot;submit&quot; name=&quot;ctl00$phBody$SignUp$btnContinue&quot; value=&quot;Continue&quot; onclick=&quot;javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&amp;quot;ctl00$phBody$SignUp$btnContinue&amp;quot;, &amp;quot;&amp;quot;, true, &amp;quot;vgSignUp&amp;quot;, &amp;quot;&amp;quot;, false, false))&quot; id=&quot;ctl00_phBody_SignUp_btnContinue&quot; class=&quot;btn btn-block border themeborder themecolor mb-2 signupcontinue mt-3&quot;&gt; is not clickable at point (950, 627). Other element would receive the click: &lt;iframe title=&quot;recaptcha challenge expires in two minutes&quot; name=&quot;c-3e9ze9dr4yh7&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot; sandbox=&quot;allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox allow-storage-access-by-user-activation&quot; src=&quot;https://www.google.com/recaptcha/api2/bframe?hl=en&amp;amp;v=N67nZn4AqZkNcbeMu4prBgzg&amp;amp;k=6LcWegclAAAAANuIZ3_JgCoh-naBjY69vaCvY2Xj&amp;amp;bft=0dAFcWeA7Mhs_kSA_iAGsrWLpXnu-CilJF_oUqtsFsWn8P3kzn35_RafiN8Sylps-KaHPjb2JBO5_31ICx1I6vexHX0SMDu14e-w&quot; style=&quot;width: 400px; height: 611px;&quot;&gt;&lt;/iframe&gt;
+  (Session info: chrome=144.0.7559.61)
+Build info: version: &apos;4.36.0&apos;, revision: &apos;6d115cfd87&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.6&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [ec7c9a507648e080e35bae4ae2623235, clickElement {id=f.BC90CB4FCBB88E5DDC3BE043773F17D9.d.D5897519E1E89ED357F4FF8ACD001634.e.93}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 144.0.7559.61, chrome: {chromedriverVersion: 144.0.7559.109 (6a8d5e49388..., userDataDir: C:\Users\aditya.sah\AppData...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:58803}, goog:processID: 14632, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:58803/devtoo..., se:cdpVersion: 144.0.7559.61, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on windows (ec7c9a507648e080e35bae4ae2623235)] -&gt; id: ctl00_phBody_SignUp_btnContinue]
+Session ID: ec7c9a507648e080e35bae4ae2623235
+	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:215)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:557)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:223)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:76)
+	at Excel_File.Excel01.click_continue(Excel01.java:71)
+	at ✽.I click continue(file:///C:/Users/aditya.sah/eclipse-workspace/Cucumber_Testing_02/src/test/java/ExcelFeature/excel.feature:9)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
