--- a/Cucumber_Testing_02/Cucumber_Testing_02/test-output/index.html
+++ b/Cucumber_Testing_02/Cucumber_Testing_02/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\aditya.sah\AppData\Local\Temp\testng-eclipse--492797972\testng-customsuite.xml</span>
+                    <span>C:\Users\aditya.sah\AppData\Local\Temp\testng-eclipse--2092605719\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,26 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Default_suite">
+                    <div class="method-list-content failed suite-Default_suite">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestRunnerPackage.Runnerfile_3" class="method navigator-link" hash-for-method="runScenario(&quot;Validate signup result&quot;, &quot;Optional[Sign up BooksWagon]&quot;)">runScenario("Validate signup result", "Optional[Sign up BooksWagon]")</a> <!-- method navigator-link -->
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="TestRunnerPackage.ExcelFile" class="method navigator-link" hash-for-method="runScenario(&quot;Validate signup with Excel row 1 (first data row)&quot;, &quot;Optional[Sign up BooksWagon]&quot;)">runScenario("Validate signup with Excel row 1 (first data row)", "Optional[Sign up BooksWagon]")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestRunnerPackage.Runnerfile_3" class="method navigator-link" hash-for-method="runScenario(&quot;Validate signup result&quot;, &quot;Optional[Sign up BooksWagon]&quot;)">runScenario("Validate signup result", "Optional[Sign up BooksWagon]")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -123,38 +118,53 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+          <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">TestRunnerPackage.Runnerfile_3</span>
+              <img src="failed.png"/>
+              <span class="class-name">TestRunnerPackage.ExcelFile</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Validate signup result&quot;, &quot;Optional[Sign up BooksWagon]&quot;)">
-                  </a> <!-- runScenario("Validate signup result", "Optional[Sign up BooksWagon]") -->
+                  <a name="runScenario(&quot;Validate signup with Excel row 1 (first data row)&quot;, &quot;Optional[Sign up BooksWagon]&quot;)">
+                  </a> <!-- runScenario("Validate signup with Excel row 1 (first data row)", "Optional[Sign up BooksWagon]") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Validate signup result","Optional[Sign up BooksWagon]")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Validate signup result&quot;, &quot;Optional[Sign up BooksWagon]&quot;)">
-                  </a> <!-- runScenario("Validate signup result", "Optional[Sign up BooksWagon]") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Validate signup result","Optional[Sign up BooksWagon]")</span>
+                  <span class="parameters">("Validate signup with Excel row 1 (first data row)","Optional[Sign up BooksWagon]")</span>
+                  <div class="stack-trace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;input type=&quot;submit&quot; name=&quot;ctl00$phBody$SignUp$btnContinue&quot; value=&quot;Continue&quot; onclick=&quot;javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&amp;quot;ctl00$phBody$SignUp$btnContinue&amp;quot;, &amp;quot;&amp;quot;, true, &amp;quot;vgSignUp&amp;quot;, &amp;quot;&amp;quot;, false, false))&quot; id=&quot;ctl00_phBody_SignUp_btnContinue&quot; class=&quot;btn btn-block border themeborder themecolor mb-2 signupcontinue mt-3&quot;&gt; is not clickable at point (950, 627). Other element would receive the click: &lt;iframe title=&quot;recaptcha challenge expires in two minutes&quot; name=&quot;c-3e9ze9dr4yh7&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot; sandbox=&quot;allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox allow-storage-access-by-user-activation&quot; src=&quot;https://www.google.com/recaptcha/api2/bframe?hl=en&amp;amp;v=N67nZn4AqZkNcbeMu4prBgzg&amp;amp;k=6LcWegclAAAAANuIZ3_JgCoh-naBjY69vaCvY2Xj&amp;amp;bft=0dAFcWeA7Mhs_kSA_iAGsrWLpXnu-CilJF_oUqtsFsWn8P3kzn35_RafiN8Sylps-KaHPjb2JBO5_31ICx1I6vexHX0SMDu14e-w&quot; style=&quot;width: 400px; height: 611px;&quot;&gt;&lt;/iframe&gt;
+  (Session info: chrome=144.0.7559.61)
+Build info: version: &apos;4.36.0&apos;, revision: &apos;6d115cfd87&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.6&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [ec7c9a507648e080e35bae4ae2623235, clickElement {id=f.BC90CB4FCBB88E5DDC3BE043773F17D9.d.D5897519E1E89ED357F4FF8ACD001634.e.93}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 144.0.7559.61, chrome: {chromedriverVersion: 144.0.7559.109 (6a8d5e49388..., userDataDir: C:\Users\aditya.sah\AppData...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:58803}, goog:processID: 14632, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:58803/devtoo..., se:cdpVersion: 144.0.7559.61, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on windows (ec7c9a507648e080e35bae4ae2623235)] -&gt; id: ctl00_phBody_SignUp_btnContinue]
+Session ID: ec7c9a507648e080e35bae4ae2623235
+	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:215)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:557)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:223)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:76)
+	at Excel_File.Excel01.click_continue(Excel01.java:71)
+	at ✽.I click continue(file:///C:/Users/aditya.sah/eclipse-workspace/Cucumber_Testing_02/src/test/java/ExcelFeature/excel.feature:9)
+
+</div> <!-- stack-trace -->
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
+          </div> <!-- suite-Default_suite-class-failed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\aditya.sah\AppData\Local\Temp\testng-eclipse--492797972\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\aditya.sah\AppData\Local\Temp\testng-eclipse--2092605719\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -163,7 +173,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestRunnerPackage.Runnerfile_3&quot;/&gt;
+      &lt;class name=&quot;TestRunnerPackage.ExcelFile&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -211,20 +221,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'TestRunnerPackage.Runnerfile_3')
-data.setCell(0, 3, 14250);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'TestRunnerPackage.Runnerfile_3')
-data.setCell(1, 3, 11292);
+data.setCell(0, 2, 'TestRunnerPackage.ExcelFile')
+data.setCell(0, 3, 17637);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 25 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -250,22 +256,20 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestRunnerPackage.Runnerfile_3</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestRunnerPackage.ExcelFile</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Validate signup result", "Optional[Sign up BooksWagon]")</span>
-                <span class="method-start">773 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Validate signup result", "Optional[Sign up BooksWagon]")</span>
-                <span class="method-start">15029 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">runScenario("Validate signup with Excel row 1 (first data row)", "Optional[Sign up BooksWagon]")</span>
+                <span class="method-start">757 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">26326 ms</span>
+                <span class="method-start">18405 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
