--- a/Cucumber_Testing_02/test-output/index.html
+++ b/Cucumber_Testing_02/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\aditya.sah\AppData\Local\Temp\testng-eclipse--749996876\testng-customsuite.xml</span>
+                    <span>C:\Users\aditya.sah\AppData\Local\Temp\testng-eclipse-606634994\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="DriverTesting.Webdriver_Runner" class="method navigator-link" hash-for-method="runScenario(&quot;Open Google on all 3 browsers&quot;, &quot;Optional[Cross browser check]&quot;)">runScenario("Open Google on all 3 browsers", "Optional[Cross browser check]")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="browser_runner.driver_runner" class="method navigator-link" hash-for-method="runScenario(&quot;Open Google on all 3 browsers&quot;, &quot;Optional[Cross browser check]&quot;)">runScenario("Open Google on all 3 browsers", "Optional[Cross browser check]")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,7 +121,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">DriverTesting.Webdriver_Runner</span>
+              <span class="class-name">browser_runner.driver_runner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -139,7 +139,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\aditya.sah\AppData\Local\Temp\testng-eclipse--749996876\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\aditya.sah\AppData\Local\Temp\testng-eclipse-606634994\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +148,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;DriverTesting.Webdriver_Runner&quot;/&gt;
+      &lt;class name=&quot;browser_runner.driver_runner&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -199,13 +199,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'DriverTesting.Webdriver_Runner')
-data.setCell(0, 3, 11158);
+data.setCell(0, 2, 'browser_runner.driver_runner')
+data.setCell(0, 3, 18445);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 18 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -231,18 +231,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">DriverTesting.Webdriver_Runner</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">browser_runner.driver_runner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Open Google on all 3 browsers", "Optional[Cross browser check]")</span>
-                <span class="method-start">176 ms</span>
+                <span class="method-start">346 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">11338 ms</span>
+                <span class="method-start">18800 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
